--- a/assets/typography.css
+++ b/assets/typography.css
@@ -1,11 +1,83 @@
 body {
- font-family: "Open Sans";
+ font-family: "Libre Franklin";
+ background-color: #0d2137;
+ color: #fff;
+ max-width: 80%;
+ margin: 0 auto;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
- color: hotpink;
+
+h1 {
+ font-weight: bold;
+ margin: 2em 0;
+ text-align: center;
+}
+
+h3 {
+ margin-bottom: 0.75em;
+ margin-top: 2em;
+ font-weight: 500;
+ letter-spacing: 1px;
+ font-size: 14px;
+ opacity: 0.9;
+ text-transform: uppercase;
+}
+
+p {
+ margin: 0.5em 0;
+}
+
+.dash-graph {
+ height: 700px;
+ margin: auto;
+ /* border-radius: 10px; */
+}
+
+#example-graph {
+ background-color: blue;
+}
+
+.years-info {
+ display: flex;
+ flex-direction: row;
+ justify-content: center;
+}
+
+.info {
+ background-color: #fff;
+ border-radius: 0.5em;
+ padding: 1em;
+ display: flex;
+ justify-content: space-around;
+ flex-direction: column;
+ width: 35vw;
+
+ color: #0d2137;
+ margin-right: 2em;
+}
+
+.info p {
+ margin: 0;
+ font-weight: 500;
+}
+
+a {
+ font-weight: 600;
+ /* text-decoration: none; */
+ color: inherit;
+ margin-bottom: 0.25em;
+}
+
+.display-inline {
+ display: inline-block;
+}
+
+.valence {
+ font-weight: 700;
+ padding-right: 0.5em;
+}
+
+.histogram,
+.years_info,
+.lines {
+ margin: 12em 0;
 }
